src/test/ui/overlap-marker-trait.stderr
error[E0277]: the trait bound `NotDebugOrDisplay: Marker` is not satisfied
  --> $DIR/overlap-marker-trait.rs:30:17
   |
LL | fn is_marker<T: Marker>() { }
   |    ---------    ------ required by this bound in `is_marker`
...
LL |     is_marker::<NotDebugOrDisplay>();
   |                 ^^^^^^^^^^^^^^^^^ the trait `Marker` is not implemented for `NotDebugOrDisplay`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
